[gd_scene load_steps=17 format=2]

[ext_resource path="res://Enemies/big_worm.png" type="Texture" id=1]
[ext_resource path="res://Enemies/wormSpawn.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://Overlap/Hurtbox.gd" type="Script" id=4]
[ext_resource path="res://Enemies/Boss.gd" type="Script" id=5]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/BossStats.tscn" type="PackedScene" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "normal",
"speed": 6.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 12.0
height = 26.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 19.8832
height = 2.0999

[sub_resource type="CircleShape2D" id=8]
radius = 98.1275

[sub_resource type="CapsuleShape2D" id=9]
radius = 12.0
height = 6.0

[node name="Boss" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 5 )
ACCELERATION = 220
MAX_SPEED = 65

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1, -4.75 )
scale = Vector2( 1.375, 1.28906 )
frames = SubResource( 5 )
animation = "normal"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10 )
shape = SubResource( 6 )

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2( 639.231, 47.4409 )
collision_layer = 8
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -639.492, -50.228 )
shape = SubResource( 7 )

[node name="Timer" type="Timer" parent="Hurtbox"]

[node name="BossStats" parent="." instance=ExtResource( 8 )]
max_health = 6

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 0.282353, 0.815686, 0.223529, 1 )
position = Vector2( 1, -2 )
shape = SubResource( 8 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
position = Vector2( 65, 0 )
collision_mask = 4
damage = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -65, -19 )
shape = SubResource( 9 )

[node name="wormSpawn" parent="." instance=ExtResource( 2 )]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="Hurtbox" method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="Hurtbox" method="_on_Hurtbox_invincibility_started"]
[connection signal="timeout" from="Hurtbox/Timer" to="Hurtbox" method="_on_Timer_timeout"]
[connection signal="no_health" from="BossStats" to="." method="_on_Stats_no_health"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]

[editable path="wormSpawn"]
